# pretty_backtrace

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: main.yaml
examples/: simple.rs
src/: backtrace.rs  display_frame.rs  dwarf.rs  lib.rs  locate_debuginfo.rs  syntax_highlight.rs  values.rs  var_guard.rs
tests/: should_panic_test.rs
