[package]
name = "pretty_backtrace"
version = "0.1.0"
authors = ["bjorn3 <bjorn3@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bjorn3/pretty_backtrace"

[dependencies]
object = "0.11.0"
gimli = "0.16.1"
addr2line = "0.8.0"

backtrace = "0.3.13"

regex = "1.1.0"
lazy_static = "1.2.0"
syntect = "3.0.2"
rental = "0.5.2"
findshlibs = "0.4.0"
#unwind = { git = "https://github.com/gimli-rs/unwind-rs" }
#fallible-iterator = "0.1.0"
libc = "0.2.51"
mopa = "0.2.2"
